<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uren.com.catchu.GetFriendOrGroupPackage.SelectFriendOrGroupActivity">

    <item
        android:id="@+id/addNewGroup"
        android:orderInCategory="100"
        android:title="@string/addNewGroup"
        app:showAsAction="never" />

    <item
        android:id="@+id/logOut"
        android:orderInCategory="100"
        android:title="@string/exitItem"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_action_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"/>
</menu>
