<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    tools:context=".LoginPackage.MainActivity">

    <!--ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/stars"/-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="bottom"
                android:text="CatchU"
                android:textColor="@color/clearRed"
                android:textSize="50sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/appName"
            android:layout_weight="1"
            android:alpha="10"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dip"
            android:theme="@style/EditTextTheme">

            <!--  Email Label -->
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/mail"
                android:drawablePadding="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:textColor="@color/clearRed"
                android:textColorHint="@color/tintColor" />


            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/key"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:paddingLeft="8dp"
                android:textColor="@color/clearRed"
                android:textColorHint="@color/tintColor" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/ripple"
                android:text="@string/login"
                android:textColor="@color/clearRed"
                android:id="@+id/btnLogin"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:orientation="horizontal">

            <uren.com.catchu.LoginPackage.utils.ClickableImageView
                android:id="@+id/clickImageTwitter"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/twitter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <uren.com.catchu.LoginPackage.utils.ClickableImageView
                android:id="@+id/clickImageFB"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:src="@mipmap/facebook"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnForgetPassword"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
